modified:   api/server/controller/biology_controller.go 	modified:   api/server/controller/company_controller.go 	modified:   api/server/controller/device_controller.go 	modified:   api/server/dao/biology_dao.go 	modified:   api/server/dao/company_dao.go 	modified:   api/server/dao/device_dao.go 	modified:   api/server/entity/device.go 	modified:   api/server/router/biology_router.go 	modified:   api/server/router/company_router.go 	modified:   api/server/router/device_router.go 	modified:   api/server/service/biology_service.go 	modified:   api/server/service/company_service.go 	modified:   api/server/service/device_service.go 	modified:   api/server/vo/biology_info.go 	new file:   api/server/vo/own_assets.go 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml
